--- a/Project/Report/biblio.bib
+++ b/Project/Report/biblio.bib
@@ -1,4 +1,22 @@
-@article{signalprocessing,
+@misc{ stanlee,
+    author = "{Wikipedia}",
+    title = "Stan Lee",
+    howpublished = "\url{https://en.wikipedia.org/wiki/Stan_Lee}",
+  }
+  
+  @misc{alanrickman,
+    author = "{Wikipedia}",
+    title = "Alan Rickman",
+    howpublished = "\url{https://en.wikipedia.org/wiki/Alan_Rickman}",
+  }
+
+ @misc{stephenhawking,
+    author = "{Wikipedia}",
+    title = "Stephen Hawking",
+    howpublished = "\url{https://en.wikipedia.org/wiki/Stephen_Hawking}",
+  }
+  
+ @article{signalprocessing,
   title={The emerging field of signal processing on graphs: Extending high-dimensional data analysis to networks and other irregular domains},
   author={Shuman, David I and Narang, Sunil K and Frossard, Pascal and Ortega, Antonio and Vandergheynst, Pierre},
   journal={IEEE Signal Processing Magazine},
